added ColorPicker + some necessary buttons for the UI